src/test/ui/generator-yielding-or-returning-itself.stderr
error[E0271]: type mismatch resolving `<[generator@$DIR/generator-yielding-or-returning-itself.rs:15:34: 19:6 _] as std::ops::Generator>::Return == [generator@$DIR/generator-yielding-or-returning-itself.rs:15:34: 19:6 _]`
  --> $DIR/generator-yielding-or-returning-itself.rs:15:5
   |
LL |     want_cyclic_generator_return(|| {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size
   |
   = note: closures cannot capture themselves or take themselves as argument;
           this error may be the result of a recent compiler bug-fix,
           see https://github.com/rust-lang/rust/issues/46062 for more details
note: required by `want_cyclic_generator_return`
  --> $DIR/generator-yielding-or-returning-itself.rs:9:1
   |
LL | / pub fn want_cyclic_generator_return<T>(_: T)
LL | |     where T: Generator<Yield = (), Return = T>
LL | | {
LL | | }
   | |_^

error[E0271]: type mismatch resolving `<[generator@$DIR/generator-yielding-or-returning-itself.rs:28:33: 32:6 _] as std::ops::Generator>::Yield == [generator@$DIR/generator-yielding-or-returning-itself.rs:28:33: 32:6 _]`
  --> $DIR/generator-yielding-or-returning-itself.rs:28:5
   |
LL |     want_cyclic_generator_yield(|| {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size
   |
   = note: closures cannot capture themselves or take themselves as argument;
           this error may be the result of a recent compiler bug-fix,
           see https://github.com/rust-lang/rust/issues/46062 for more details
note: required by `want_cyclic_generator_yield`
  --> $DIR/generator-yielding-or-returning-itself.rs:22:1
   |
LL | / pub fn want_cyclic_generator_yield<T>(_: T)
LL | |     where T: Generator<Yield = T, Return = ()>
LL | | {
LL | | }
   | |_^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
